account verification added

--- a/public/assets/front/profile.html
+++ b/public/assets/front/profile.html
@@ -10,7 +10,7 @@
 		<!-- Latest compiled JavaScript -->
 		<script src="js/bootstrap.min.js"></script>
 	</head>
-	<body>
+	<body style="background-color: #F8F8F8;">
 				<div class="header-wrapper">
 					<div class="center">
 						<div class="header">
@@ -80,11 +80,11 @@
 												<div class="row">
 													<div class="col-sm-6 count-wrapper">
 														<h3 style="margin: 0px;"><strong>802</strong></h3>
-														<span class="glyphicon glyphicon-star"></span>Reputation Points
+														<img src="images/STAR.png"/ class="icon-image">Reputation Points
 													</div>
 													<div class="col-sm-6 count-wrapper">
 														<h3 style="margin: 0px;"><strong>207</strong></h3>
-														<span class="glyphicon glyphicon-star"></span>Votes Submitted
+														<img src="images/thumb.png"/ class="icon-image">Votes Submitted
 													</div>
 												</div>
 											</div>
@@ -92,11 +92,11 @@
 												<div class="row">
 													<div class="col-sm-6 count-wrapper">
 														<h3 style="margin: 0px;"><strong>79</strong></h3>
-														<span class="glyphicon glyphicon-star"></span>Deals Posted
+														<img src="images/token.png"/ class="icon-image">Deals Posted
 													</div>
 													<div class="col-sm-6 count-wrapper">
 														<h3 style="margin: 0px;"><strong>335</strong></h3>
-														<span class="glyphicon glyphicon-star"></span>Comments Posted
+														<img src="images/bubble.png"/ class="icon-image">Comments Posted
 													</div>
 												</div>
 											</div>
